--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "samurai-way",
 	"version": "0.1.0",
-	"private": false,
+	"private": true,
 	"homepage": "https://meePwn1.github.io/samurai-way",
 	"dependencies": {
 		"@testing-library/jest-dom": "5.14.1",
@@ -23,7 +23,7 @@
 		"redux-form": "8.3.8",
 		"redux-thunk": "2.4.1",
 		"reselect": "4.1.5",
-		"sass": "^1.69.5",
+		"sass": "^1.69.6",
 		"typescript": "4.4.2",
 		"uuid": "8.3.2",
 		"web-vitals": "2.1.0"
