--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
 	"private": true,
 	"homepage": "https://meePwn1.github.io/samurai-way",
 	"dependencies": {
+		"@emotion/react": "^11.11.3",
+		"@emotion/styled": "^11.11.0",
+		"@mui/icons-material": "^5.15.7",
+		"@mui/material": "^5.15.7",
 		"@testing-library/jest-dom": "5.14.1",
 		"@testing-library/react": "12.0.0",
 		"@testing-library/user-event": "13.2.1",
@@ -15,6 +19,7 @@
 		"jest": "27.5.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-loading-skeleton": "^3.4.0",
 		"react-redux": "7.2.6",
 		"react-router-dom": "5.3.0",
 		"react-scripts": "5.0.0",
